
CHANGELOG:
==========

2.5.12
  * enhancement: added environment variable 'DUMA_CHECK_FREQ' to autmatically
      check no man's land at each n'th allocation/deallocation (n=0 for no
      automatic checks)
  (2008-01-24, HA)

2.5.11
  * bugfix on thread safety in sem_inc.c
      thanks to Andrew Kornev writing the right hint as bugreport:
      "[ 1875926 ] non-thread safe lock() implementation"
  (2008-01-20, HA)

2.5.10
  * added small test program to demonstrate crashing on multithreaded
      programs from
      http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=67838
  (2008-01-15, HA)
  * added html comparison charts/text and C source code examples from
      http://www.cs.utexas.edu/~jpmartin/memCheckers.html
      into subdir comparisons
      with kind permission of Jean-Philippe Martin
  * added Makefile for each C source file
  (2008-01-14, HA)
  * bugfix for Makefile target install, when DUMASO is empty
      bug was reported from Louis Strous
  (2008-01-09, HA)
  * added hint where no man's land was overwritten:
    below or above userSpace
  (2008-01-03, HA)

2.5.9
  * added link to mpatrol in README
  * added shell environment variable 'DUMA_SKIPCOUNT_INIT'
  (2007-08-22, HA)
  * added section for NetBSD in Makefile
    there is always 1 memory leak on NetBSD-3.1
      .. but the functionality works
  (2007-08-28, HA)
  * tested on powerpc-apple-darwin8.0.0 inside of PearPC 0.4 (Windows):
    compiles and passes all confidence tests. trying to debug example1
    from within gdb crashes whole PearPC; running without gdb creates
    a core dump one can analyse afterwards with gdb.
  (2007-09-02, HA)
  * bugfix for _duma_strncpy(): no more call to strlen()
      bug was reported from kamallneet <kamalneet@gmail.com>
  * applied patch from  Eddy Pronk <epronk at users.sourceforge.net>
      submitted to sourceforge with title "libduma.so on Solaris"
  (2007-11-13, HA)
  * added minor error check in print.c about DUMA_OUTPUT_FILE